fix/event-show-jump-btn

--- a/app/assets/stylesheets/public/events.scss
+++ b/app/assets/stylesheets/public/events.scss
@@ -218,9 +218,6 @@
     .event-url{
       width: 90%;
     }
-    .jump-to-songs-flex{
-      display: flex;
-    }
     .join-member-list{
       border: 1px solid black;
       border-radius: 10px;
